--- a/iphone/Maps/LocalizedStrings/el.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/el.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Νέος κατάλογος οδηγών και χιλιάδες ιδέες για ταξίδια";
+
+"whatsnew_catalog_new_message" = "Έχουμε ενημερώσει τον κατάλογο οδηγών και προσθέσαμε μεταφράσεις σε όλες τις γλώσσες. Ξεκινήστε να κάνετε τα σχέδια σας εκ των προτέρων!";
+
+"whatsnew_elevation_profile_title" = "Προφίλ υψόμετρου στους οδηγούς";
+
+"whatsnew_elevation_profile_message" = "Αξιολογήστε τη δυσκολία των επερχόμενων αναβάσεων και καταβάσεων εκτός σύνδεσης με τη βοήθεια του δρομέα στο προφίλ της διαδρομής που αποκτήσατε.";
+
 
 /**********  Partners  **********/
 
