--- a/iphone/Maps/LocalizedStrings/fa.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fa.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "کاتالوگ راهنما های جدید و هزاران ایده سفر";
+
+"whatsnew_catalog_new_message" = "ما کاتالوگ راهنما را به روزرسانی کرده ایم و ترجمه تمامی زبان ها را افزوده ایم. از پیش برنامه ریزی کنید!";
+
+"whatsnew_elevation_profile_title" = "پروفایل ارتفاع در راهنمای سفر";
+
+"whatsnew_elevation_profile_message" = "پیچیدگی بالا رفتن ها و پایین آمدن های آفلاین بعدی را در پروفایل مسیرهای خریداری شده به وسیله مکان نما ارزیابی کنید.";
+
 
 /**********  Partners  **********/
 
