--- a/iphone/Maps/LocalizedStrings/id.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/id.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Katalog panduan baru dan ribuan ide perjalanan";
+
+"whatsnew_catalog_new_message" = "Kami telah memperbarui katalog panduan dan menambahkan terjemahan dalam semua bahasa. Mulai perencanaan terlebih dahulu!";
+
+"whatsnew_elevation_profile_title" = "Profil elevasi dalam panduan perjalanan";
+
+"whatsnew_elevation_profile_message" = "Mengevaluasi kerumitan kenaikan dan penurunan offline yang akan datang dengan kursor di profil dari rute yang dibeli.";
+
 
 /**********  Partners  **********/
 
