--- a/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Nuovo catalogo guide e migliaia di idee per divertirsi";
+
+"whatsnew_catalog_new_message" = "Abbiamo aggiornato il nostro catalogo guide e abbiamo aggiunto traduzioni in tutte le lingue. Programma subito i tuoi viaggi!";
+
+"whatsnew_elevation_profile_title" = "Profilo altimetrico e guide";
+
+"whatsnew_elevation_profile_message" = "Valuta offline la difficoltà di ascesa e discesa grazie al cursore del profilo altimetrico del percorso acquistato.";
+
 
 /**********  Partners  **********/
 
