--- a/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Ny katalog med tusenvis av ferieideer";
+
+"whatsnew_catalog_new_message" = "Vi har oppdatert guidekatalogen vår og lagt til oversettelser til alle språk. Begynn å planlegge på forhånd!";
+
+"whatsnew_elevation_profile_title" = "Høydeprofil i guidene";
+
+"whatsnew_elevation_profile_message" = "Evaluer vanskeligheten til kommende oppstigninger og nedstigninger uten nett med markøren i profilen til den kjøpte ruten.";
+
 
 /**********  Partners  **********/
 
