--- a/iphone/Maps/LocalizedStrings/nl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nl.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Nieuwe reisgidscatalogus en duizenden reisideeën";
+
+"whatsnew_catalog_new_message" = "We hebben de reisgidscatalogus bijgewerkt en vertalingen in alle talen toegevoegd. Begin vooruit te plannen!";
+
+"whatsnew_elevation_profile_title" = "Hoogteprofiel in reisgidsen";
+
+"whatsnew_elevation_profile_message" = "Evalueer de moeilijkheidsgraad van komende beklimmingen en afdalingen offline met de cursor in het profiel van de aangeschafte route.";
+
 
 /**********  Partners  **********/
 
