--- a/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Nowy katalog przewodników i tysiące pomysłów na podróż";
+
+"whatsnew_catalog_new_message" = "Zaktualizowaliśmy katalog przewodników i dodaliśmy tłumaczenia we wszystkich językach. Zacznij planować z wyprzedzeniem!";
+
+"whatsnew_elevation_profile_title" = "Profil wysokości w przewodnikach";
+
+"whatsnew_elevation_profile_message" = "Oceń złożoność nadchodzących zjazdów i zejść offline za pomocą kursora w profilu zakupionej trasy.";
+
 
 /**********  Partners  **********/
 
