--- a/iphone/Maps/LocalizedStrings/ro.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ro.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Un nou catalog și mii de idei de vacanță";
+
+"whatsnew_catalog_new_message" = "Am actualizat catalogul de ghiduri și am adăugat traduceri în toate limbile. Începeți planificarea înainte!";
+
+"whatsnew_elevation_profile_title" = "Profilul înălțimilor în ghiduri";
+
+"whatsnew_elevation_profile_message" = "Evaluați complexitatea urcărilor și coborârilor viitoare offline cu cursorul în profilul traseului achiziționat.";
+
 
 /**********  Partners  **********/
 
