--- a/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Новий каталог і тисячі ідей для відпочинку";
+
+"whatsnew_catalog_new_message" = "Ми оновили каталог путівників і додали переклади на всі мови. Почніть планувати заздалегідь!";
+
+"whatsnew_elevation_profile_title" = "Профіль висот у путівниках";
+
+"whatsnew_elevation_profile_message" = "Оцінюйте складність майбутніх підйомів і спусків офлайн за допомогою курсору в профілі придбаного маршруту.";
+
 
 /**********  Partners  **********/
 
