--- a/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "新目錄和數千個理想度假勝地";
+
+"whatsnew_catalog_new_message" = "我們更新了指南目錄，並添加了所有語言的翻譯。開始提前計劃！";
+
+"whatsnew_elevation_profile_title" = "指南中的高度剖面圖";
+
+"whatsnew_elevation_profile_message" = "使用所獲取路線中的光標離線評估即將遇到的上坡和下坡的難度。";
+
 
 /**********  Partners  **********/
 
