--- a/android/res/values-ar/strings.xml
+++ b/android/res/values-ar/strings.xml
@@ -1781,6 +1781,10 @@
 	<string name="hide_screen_map_update">إخفاء ومتابعة</string>
 	<string name="view_on_map_downloaded_error">تم حذف هذا الدليل من هذا الجهاز</string>
 	<string name="subscription">الاشتراك</string>
+	<string name="whatsnew_catalog_new_title">قائمة أدلة جديدة والآلاف من أفكار السفر</string>
+	<string name="whatsnew_catalog_new_message">لقد قمنا بتحديث قائمة الأدلة وإضافة ترجمات بكل اللغات. ابدأ بتخطيط سفرك مسبقًا!</string>
+	<string name="whatsnew_elevation_profile_title">ملف تحديد الارتفاع في أدلة السفر</string>
+	<string name="whatsnew_elevation_profile_message">قم بتقييم درجة صعوبة الصعود والهبوط التاليين دون اتصال باستخدام المؤشر في الملف الخاص بالمسار الذي تم شراؤه.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">محطة تلفريك</string>
