--- a/android/res/values-da/strings.xml
+++ b/android/res/values-da/strings.xml
@@ -1780,6 +1780,10 @@
 	<string name="hide_screen_map_update">Skjul og fortsæt</string>
 	<string name="view_on_map_downloaded_error">Denne guide er blevet fjernet fra denne enhed</string>
 	<string name="subscription">Abonnement</string>
+	<string name="whatsnew_catalog_new_title">Nyt guide katalog og rejseidéer</string>
+	<string name="whatsnew_catalog_new_message">Vi har opdateret guide kataloget og tilføjet oversættelser på alle sprog. Påbegynd planlægning på forhånd!</string>
+	<string name="whatsnew_elevation_profile_title">Højdeprofil i rejseguides</string>
+	<string name="whatsnew_elevation_profile_message">Vurder kompleksiteten af kommende offline stigninger og nedstigninger med markøren i profilen af den købte rute.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Kabelbanestation</string>
