--- a/android/res/values-fr/strings.xml
+++ b/android/res/values-fr/strings.xml
@@ -1794,6 +1794,10 @@
 	<string name="hide_screen_map_update">Fermer la fenêtre et continuer la navigation</string>
 	<string name="view_on_map_downloaded_error">Ce guide a été supprimé de votre appareil</string>
 	<string name="subscription">Souscription</string>
+	<string name="whatsnew_catalog_new_title">Nouveau catalogue et des miliers d\'idées de voyages</string>
+	<string name="whatsnew_catalog_new_message">Nous avons mis à jour le catalogue des guides et avons ajouté les traductions dans toutes les langues. Planifiez vos voyages à l\'avance !</string>
+	<string name="whatsnew_elevation_profile_title">Profil altimétrique intégré dans les guides</string>
+	<string name="whatsnew_elevation_profile_message">Vous pouvez estimer la difficulté de vos futures montées et descentes hors connexion à l\'aide d\'un curseur disponible dans le profil de l\'itinéraire acheté.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Remontées mécaniques</string>
