--- a/android/res/values-hu/strings.xml
+++ b/android/res/values-hu/strings.xml
@@ -1777,6 +1777,10 @@
 	<string name="hide_screen_map_update">Elrejt és folytat</string>
 	<string name="view_on_map_downloaded_error">Ezt az útmutatót törölték erről az eszközről</string>
 	<string name="subscription">Feliratkozás</string>
+	<string name="whatsnew_catalog_new_title">Új útmutatók katalógusa és több ezer utazási ötlet</string>
+	<string name="whatsnew_catalog_new_message">Frissítettük az útmutatók katalógusát és minden nyelven hozzáadtuk a fordításokat. Tervezze meg előre utazását!</string>
+	<string name="whatsnew_elevation_profile_title">Emelkedési profil az utazási útmutatókban</string>
+	<string name="whatsnew_elevation_profile_message">A kurzorral becsülje meg a közelgő offline felemelkedések és leereszkedések nehézségét a megvásárolt útvonal profiljában.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Felvonóállomás</string>
