--- a/android/res/values-ja/strings.xml
+++ b/android/res/values-ja/strings.xml
@@ -1769,6 +1769,10 @@
 	<string name="hide_screen_map_update">閉じて継続</string>
 	<string name="view_on_map_downloaded_error">このガイドはこの機器から削除されました</string>
 	<string name="subscription">サブスクリプション</string>
+	<string name="whatsnew_catalog_new_title">新しいガイドのカタログと数千の旅行アイディア</string>
+	<string name="whatsnew_catalog_new_message">ガイドのカタログが更新され、全ての言語に翻訳が追加されました。事前に計画を立てましょう！</string>
+	<string name="whatsnew_elevation_profile_title">旅行ガイドの標高情報</string>
+	<string name="whatsnew_elevation_profile_message">購入したルートのプロフィールでカーソルを使って今後のオフラインの上昇と下降の難易度を調べましょう。</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">ケーブルカー駅</string>
