--- a/android/res/values-ko/strings.xml
+++ b/android/res/values-ko/strings.xml
@@ -1771,6 +1771,10 @@
 	<string name="hide_screen_map_update">숨기고 계속하기</string>
 	<string name="view_on_map_downloaded_error">이 가이드는 이 장치에서 제거되었습니다</string>
 	<string name="subscription">구독</string>
+	<string name="whatsnew_catalog_new_title">새로운 가이드 카탈로그와 수 많은 여행 아이디어</string>
+	<string name="whatsnew_catalog_new_message">가이드 카탈로그를 업데이트했고 모든 언어로 된 번역본을 추가했습니다. 미리 여행 계획을 짜보세요!</string>
+	<string name="whatsnew_elevation_profile_title">여행 가이드의 고도 단면도</string>
+	<string name="whatsnew_elevation_profile_message">구매한 경로의 프로필에 커서를 두고 곧 있을 오프라인 올라가기 및 내려가기의 어려움을 평가합니다.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">케이블카 역</string>
