--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -1777,6 +1777,10 @@
 	<string name="hide_screen_map_update">Verbergen en doorgaan</string>
 	<string name="view_on_map_downloaded_error">Deze gids is van dit apparaat verwijderd</string>
 	<string name="subscription">Abonnement</string>
+	<string name="whatsnew_catalog_new_title">Nieuwe reisgidscatalogus en duizenden reisideeën</string>
+	<string name="whatsnew_catalog_new_message">We hebben de reisgidscatalogus bijgewerkt en vertalingen in alle talen toegevoegd. Begin vooruit te plannen!</string>
+	<string name="whatsnew_elevation_profile_title">Hoogteprofiel in reisgidsen</string>
+	<string name="whatsnew_elevation_profile_message">Evalueer de moeilijkheidsgraad van komende beklimmingen en afdalingen offline met de cursor in het profiel van de aangeschafte route.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Kabelwagenstation</string>
