--- a/android/res/values-pl/strings.xml
+++ b/android/res/values-pl/strings.xml
@@ -1787,6 +1787,10 @@
 	<string name="hide_screen_map_update">Ukryj i kontynuuj</string>
 	<string name="view_on_map_downloaded_error">Ten przewodnik został usunięty z urządzenia</string>
 	<string name="subscription">Subskrypcja</string>
+	<string name="whatsnew_catalog_new_title">Nowy katalog przewodników i tysiące pomysłów na podróż</string>
+	<string name="whatsnew_catalog_new_message">Zaktualizowaliśmy katalog przewodników i dodaliśmy tłumaczenia we wszystkich językach. Zacznij planować z wyprzedzeniem!</string>
+	<string name="whatsnew_elevation_profile_title">Profil wysokości w przewodnikach</string>
+	<string name="whatsnew_elevation_profile_message">Oceń złożoność nadchodzących zjazdów i zejść offline za pomocą kursora w profilu zakupionej trasy.</string>
 
 	<!-- SECTION:  Partners  -->
 	<string name="sponsored_partner1_action">Wyprzedaże</string>
