--- a/android/res/values-pt/strings.xml
+++ b/android/res/values-pt/strings.xml
@@ -1780,6 +1780,10 @@
 	<string name="hide_screen_map_update">Ocultar e continuar</string>
 	<string name="view_on_map_downloaded_error">Este guia foi apagado do dispositivo</string>
 	<string name="subscription">Subscrição</string>
+	<string name="whatsnew_catalog_new_title">Catálogo novo e milhares de ideias para as férias</string>
+	<string name="whatsnew_catalog_new_message">Atualizamos o catálogo de guias e adicionamos traduções para todos os idiomas. Comece a planejar com antecedência!</string>
+	<string name="whatsnew_elevation_profile_title">Perfil de alturas nas guias</string>
+	<string name="whatsnew_elevation_profile_message">Avalie a complexidade de futuras subidas e descidas offline com ajuda de um cursor especial no perfil do percurso adquirido.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Estação de teleférico</string>
