--- a/android/res/values-ro/strings.xml
+++ b/android/res/values-ro/strings.xml
@@ -1766,6 +1766,10 @@
 	<string name="hide_screen_map_update">Ascunde și continuă utilizarea aplicației</string>
 	<string name="view_on_map_downloaded_error">Acest ghid a fost șters de pe dispozitiv</string>
 	<string name="subscription">Abonare</string>
+	<string name="whatsnew_catalog_new_title">Un nou catalog și mii de idei de vacanță</string>
+	<string name="whatsnew_catalog_new_message">Am actualizat catalogul de ghiduri și am adăugat traduceri în toate limbile. Începeți planificarea înainte!</string>
+	<string name="whatsnew_elevation_profile_title">Profilul înălțimilor în ghiduri</string>
+	<string name="whatsnew_elevation_profile_message">Evaluați complexitatea urcărilor și coborârilor viitoare offline cu cursorul în profilul traseului achiziționat.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Stație de teleferic</string>
