--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -1822,6 +1822,10 @@
 	<string name="hide_screen_map_update">Скрыть и продолжить работу</string>
 	<string name="view_on_map_downloaded_error">Этот путеводитель был удалён с устройства</string>
 	<string name="subscription">Подписка</string>
+	<string name="whatsnew_catalog_new_title">Новый каталог и тысячи идей для отдыха</string>
+	<string name="whatsnew_catalog_new_message">Мы обновили каталог путеводителей и добавили переводы на все языки. Начните планировать заранее!</string>
+	<string name="whatsnew_elevation_profile_title">Профиль высот в путеводителях</string>
+	<string name="whatsnew_elevation_profile_message">Оценивайте сложность предстоящих подъемов и спусков офлайн с помощью курсора в профиле приобретенного маршрута.</string>
 
 	<!-- SECTION:  Partners  -->
 	<string name="sponsored_partner1_action">Аутлеты</string>
