--- a/android/res/values-sk/strings.xml
+++ b/android/res/values-sk/strings.xml
@@ -1775,6 +1775,10 @@
 	<string name="hide_screen_map_update">Skryť a pokračovať</string>
 	<string name="view_on_map_downloaded_error">Tento sprievodca bol z tohto zariadenia odstránený</string>
 	<string name="subscription">Predplatné</string>
+	<string name="whatsnew_catalog_new_title">Nový katalóg sprievodcov a tisíce nápadov na cestovanie</string>
+	<string name="whatsnew_catalog_new_message">Aktualizovali sme katalóg sprievodcov a pridali preklady do všetkých jazykov. Začnite plánovať vopred!</string>
+	<string name="whatsnew_elevation_profile_title">Výškový profil v cestovných sprievodcoch</string>
+	<string name="whatsnew_elevation_profile_message">Vyhodnoťte zložitosť prichádzajúcich výstupov a zostupov offline pomocou kurzora v profile zakúpenej trasy.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Lanovka</string>
