--- a/android/res/values-tr/strings.xml
+++ b/android/res/values-tr/strings.xml
@@ -1781,6 +1781,10 @@
 	<string name="hide_screen_map_update">Gizle ve devam et</string>
 	<string name="view_on_map_downloaded_error">Bu rehber cihazdan kaldırıldı</string>
 	<string name="subscription">Abone</string>
+	<string name="whatsnew_catalog_new_title">Yeni bir katalog ve binlerce tatil fikri</string>
+	<string name="whatsnew_catalog_new_message">Rehberlerin kataloğunu güncelledik ve tüm dillere çeviriler ekledik. Planlamanızı önceden yapmaya başlayın!</string>
+	<string name="whatsnew_elevation_profile_title">Rehberlerde yükseklik profili</string>
+	<string name="whatsnew_elevation_profile_message">Satın alınan rotanın profilindeki imleci kullanarak, yaklaşan yükselişlerin ve inişlerin zorluk derecesini çevrimdışı olarak değerlendirin.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Remontées mécaniques</string>
