--- a/android/res/values-uk/strings.xml
+++ b/android/res/values-uk/strings.xml
@@ -1782,6 +1782,10 @@
 	<string name="hide_screen_map_update">Приховати та поновити роботу</string>
 	<string name="view_on_map_downloaded_error">Цей путівник видалили з пристрою</string>
 	<string name="subscription">Передплата</string>
+	<string name="whatsnew_catalog_new_title">Новий каталог і тисячі ідей для відпочинку</string>
+	<string name="whatsnew_catalog_new_message">Ми оновили каталог путівників і додали переклади на всі мови. Почніть планувати заздалегідь!</string>
+	<string name="whatsnew_elevation_profile_title">Профіль висот у путівниках</string>
+	<string name="whatsnew_elevation_profile_message">Оцінюйте складність майбутніх підйомів і спусків офлайн за допомогою курсору в профілі придбаного маршруту.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Канатна дорога</string>
