--- a/android/res/values-vi/strings.xml
+++ b/android/res/values-vi/strings.xml
@@ -1766,6 +1766,10 @@
 	<string name="hide_screen_map_update">Thu gọn và tiếp tục thao tác với ứng dụng</string>
 	<string name="view_on_map_downloaded_error">Hướng dẫn này đã được xóa khỏi thiết bị</string>
 	<string name="subscription">Đăng ký</string>
+	<string name="whatsnew_catalog_new_title">Danh mục mới và hàng nghìn ý tưởng cho kỳ nghỉ</string>
+	<string name="whatsnew_catalog_new_message">Chúng tôi đã cập nhật danh mục hướng dẫn và bổ sung phần dịch sang tất cả các ngôn ngữ. Hãy lên kế hoạch sớm nào!</string>
+	<string name="whatsnew_elevation_profile_title">Hồ sơ độ cao trong các hướng dẫn</string>
+	<string name="whatsnew_elevation_profile_message">Hãy đánh giá độ khó khi sắp tới điểm đi lên và đi xuống ngoại tuyến bằng cách sử dụng con trỏ trong hồ sơ của tuyến đường đã mua.</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Trạm Cáp Treo</string>
