--- a/android/res/values-zh/strings.xml
+++ b/android/res/values-zh/strings.xml
@@ -1774,6 +1774,10 @@
 	<string name="hide_screen_map_update">隐藏并继续</string>
 	<string name="view_on_map_downloaded_error">该指南已从设备中删除</string>
 	<string name="subscription">订阅</string>
+	<string name="whatsnew_catalog_new_title">新目录和数千个理想度假胜地</string>
+	<string name="whatsnew_catalog_new_message">我们更新了指南目录，并添加了所有语言的翻译。开始提前计划！</string>
+	<string name="whatsnew_elevation_profile_title">指导中的高度剖面图</string>
+	<string name="whatsnew_elevation_profile_message">使用所获取路线中的光标离线评估即将遇到的上坡和下坡的难度。</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">缆车车站</string>
