--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1848,11 +1848,10 @@
 	<string name="mts_map_downloader_cta_button">Подключить</string>
 	<string name="skyeng_map_downloader_title">Дарим 3 бесплатных урока английского от Skyeng.</string>
 	<string name="skyeng_map_downloader_cta_button">Подробнее</string>
-	<string name="whatsnew_elevation_profile_title">Whats new elevation profile title</string>
-	<string name="whatsnew_elevation_profile_message">Whats new elevation profile message</string>
-	<string name="whatsnew_catalog_new_title">Whats new catalog new title</string>
-	<string name="whatsnew_catalog_new_message">Whats new catalog new message</string>
-	<string name="whatsnew_catalog_new_button">Whats new catalog button</string>
+	<string name="whatsnew_catalog_new_title">New guides catalog and thousands of travel ideas</string>
+	<string name="whatsnew_catalog_new_message">We have updated the guides catalog and added translations in all languages. Start planning in advance!</string>
+	<string name="whatsnew_elevation_profile_title">Elevation profile in travel guides</string>
+	<string name="whatsnew_elevation_profile_message">Evaluate the difficulty of upcoming offline ascents and descents with the cursor in the profile of the purchased route.</string>
 
 	<!-- SECTION:  Partners  -->
 	<string name="sponsored_partner1_action">Outlets</string>
