--- a/iphone/Maps/LocalizedStrings/ar.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ar.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "قائمة أدلة جديدة والآلاف من أفكار السفر";
+
+"whatsnew_catalog_new_message" = "لقد قمنا بتحديث قائمة الأدلة وإضافة ترجمات بكل اللغات. ابدأ بتخطيط سفرك مسبقًا!";
+
+"whatsnew_elevation_profile_title" = "ملف تحديد الارتفاع في أدلة السفر";
+
+"whatsnew_elevation_profile_message" = "قم بتقييم درجة صعوبة الصعود والهبوط التاليين دون اتصال باستخدام المؤشر في الملف الخاص بالمسار الذي تم شراؤه.";
+
 
 /**********  Partners  **********/
 
