--- a/iphone/Maps/LocalizedStrings/cs.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/cs.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Nový katalog průvodců a tisíce nápadů na cestování";
+
+"whatsnew_catalog_new_message" = "Aktualizovali jsme katalog průvodců a přidali jsme překlady ve všech jazycích. Začněte plánovat dopředu!";
+
+"whatsnew_elevation_profile_title" = "Výškový profil v cestovních průvodcích";
+
+"whatsnew_elevation_profile_message" = "Vyhodnoťte obtížnost nadcházejících offline stoupání a klesání pomocí kurzoru v profilu zakoupené trasy.";
+
 
 /**********  Partners  **********/
 
