--- a/iphone/Maps/LocalizedStrings/de.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/de.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Neuer Katalog und tausende Erholungsideen";
+
+"whatsnew_catalog_new_message" = "Wir haben das Reiseführerkatalog upgedatet und Übersetzungen in alle Sprachen hinzugefügt. Beginnen Sie im Voraus zu planen!";
+
+"whatsnew_elevation_profile_title" = "Höhenprofil in den Reiseführern";
+
+"whatsnew_elevation_profile_message" = "Bewerten Sie den Schwierigkeitsgrad des bevorstehenden Bergaufs und Bergabs offline per Kursor im Profil der erworbenen Route.";
+
 
 /**********  Partners  **********/
 
