--- a/iphone/Maps/LocalizedStrings/fr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fr.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Nouveau catalogue et des miliers d'idées de voyages";
+
+"whatsnew_catalog_new_message" = "Nous avons mis à jour le catalogue des guides et avons ajouté les traductions dans toutes les langues. Planifiez vos voyages à l'avance !";
+
+"whatsnew_elevation_profile_title" = "Profil altimétrique intégré dans les guides";
+
+"whatsnew_elevation_profile_message" = "Vous pouvez estimer la difficulté de vos futures montées et descentes hors connexion à l'aide d'un curseur disponible dans le profil de l'itinéraire acheté.";
+
 
 /**********  Partners  **********/
 
