--- a/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "새로운 가이드 카탈로그와 수 많은 여행 아이디어";
+
+"whatsnew_catalog_new_message" = "가이드 카탈로그를 업데이트했고 모든 언어로 된 번역본을 추가했습니다. 미리 여행 계획을 짜보세요!";
+
+"whatsnew_elevation_profile_title" = "여행 가이드의 고도 단면도";
+
+"whatsnew_elevation_profile_message" = "구매한 경로의 프로필에 커서를 두고 곧 있을 오프라인 올라가기 및 내려가기의 어려움을 평가합니다.";
+
 
 /**********  Partners  **********/
 
