--- a/iphone/Maps/LocalizedStrings/pt.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pt.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Catálogo novo e milhares de ideias para as férias";
+
+"whatsnew_catalog_new_message" = "Atualizamos o catálogo de guias e adicionamos traduções para todos os idiomas. Comece a planejar com antecedência!";
+
+"whatsnew_elevation_profile_title" = "Perfil de alturas nas guias";
+
+"whatsnew_elevation_profile_message" = "Avalie a complexidade de futuras subidas e descidas offline com ajuda de um cursor especial no perfil do percurso adquirido.";
+
 
 /**********  Partners  **********/
 
