--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Новый каталог и тысячи идей для отдыха";
+
+"whatsnew_catalog_new_message" = "Мы обновили каталог путеводителей и добавили переводы на все языки. Начните планировать заранее!";
+
+"whatsnew_elevation_profile_title" = "Профиль высот в путеводителях";
+
+"whatsnew_elevation_profile_message" = "Оценивайте сложность предстоящих подъемов и спусков офлайн с помощью курсора в профиле приобретенного маршрута.";
+
 
 /**********  Partners  **********/
 
