--- a/iphone/Maps/LocalizedStrings/tr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/tr.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Yeni bir katalog ve binlerce tatil fikri";
+
+"whatsnew_catalog_new_message" = "Rehberlerin kataloğunu güncelledik ve tüm dillere çeviriler ekledik. Planlamanızı önceden yapmaya başlayın!";
+
+"whatsnew_elevation_profile_title" = "Rehberlerde yükseklik profili";
+
+"whatsnew_elevation_profile_message" = "Satın alınan rotanın profilindeki imleci kullanarak, yaklaşan yükselişlerin ve inişlerin zorluk derecesini çevrimdışı olarak değerlendirin.";
+
 
 /**********  Partners  **********/
 
