--- a/iphone/Maps/LocalizedStrings/vi.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/vi.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "Danh mục mới và hàng nghìn ý tưởng cho kỳ nghỉ";
+
+"whatsnew_catalog_new_message" = "Chúng tôi đã cập nhật danh mục hướng dẫn và bổ sung phần dịch sang tất cả các ngôn ngữ. Hãy lên kế hoạch sớm nào!";
+
+"whatsnew_elevation_profile_title" = "Hồ sơ độ cao trong các hướng dẫn";
+
+"whatsnew_elevation_profile_message" = "Hãy đánh giá độ khó khi sắp tới điểm đi lên và đi xuống ngoại tuyến bằng cách sử dụng con trỏ trong hồ sơ của tuyến đường đã mua.";
+
 
 /**********  Partners  **********/
 
