--- a/iphone/Maps/LocalizedStrings/zh-Hans.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hans.lproj/Localizable.strings
@@ -3262,6 +3262,14 @@
 
 "skyeng_map_downloader_cta_button" = "Подробнее";
 
+"whatsnew_catalog_new_title" = "新目录和数千个理想度假胜地";
+
+"whatsnew_catalog_new_message" = "我们更新了指南目录，并添加了所有语言的翻译。开始提前计划！";
+
+"whatsnew_elevation_profile_title" = "指导中的高度剖面图";
+
+"whatsnew_elevation_profile_message" = "使用所获取路线中的光标离线评估即将遇到的上坡和下坡的难度。";
+
 
 /**********  Partners  **********/
 
