[strings][generated] Generated strings for type.recycling.* and type.amenity.recycling_container.

--- a/iphone/Maps/LocalizedStrings/de.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/de.lproj/Localizable.strings
@@ -3304,6 +3304,16 @@
 
 "routes_card_plus_track" = "+ Wanderweg";
 
+"routes_card_city" = "City";
+
+"routes_card_outdoor" = "Outdoor";
+
+"routes_card_number_of_points" = "%s Orte";
+
+"routes_card_routes_tag" = "Route";
+
+"routes_card_set_tag" = "Selektion der Plätze";
+
 
 /**********  Partners  **********/
 
@@ -3507,6 +3517,24 @@
 "type.amenity.public_bookcase" = "Bücherschrank";
 
 "type.amenity.recycling" = "Recyclinghof";
+
+"type.amenity.recycling_container" = "Recyclingbehälter";
+
+"type.recycling.toxic" = "Giftmüll";
+
+"type.recycling.clothes" = "Alte Kleidung";
+
+"type.recycling.glass_bottles" = "Glas-Container";
+
+"type.recycling.paper" = "Altpapier";
+
+"type.recycling.plastic" = "Plastik-Müll";
+
+"type.recycling.plastic_bottles" = "Plastic bottles";
+
+"type.recycling.scrap_metal" = "Altmetall";
+
+"type.recycling.small_appliances" = "Elektroschrott";
 
 "type.amenity.restaurant" = "Restaurant";
 
