--- a/iphone/Maps/LocalizedStrings/es.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/es.lproj/Localizable.strings
@@ -3304,6 +3304,16 @@
 
 "routes_card_plus_track" = "+ pista";
 
+"routes_card_city" = "City";
+
+"routes_card_outdoor" = "Outdoor";
+
+"routes_card_number_of_points" = "%s lugares";
+
+"routes_card_routes_tag" = "Itinerario";
+
+"routes_card_set_tag" = "Lugares destacados";
+
 
 /**********  Partners  **********/
 
@@ -3507,6 +3517,24 @@
 "type.amenity.public_bookcase" = "Intercambio de libros";
 
 "type.amenity.recycling" = "Centro de reciclaje";
+
+"type.amenity.recycling_container" = "Contenedor de reciclaje";
+
+"type.recycling.toxic" = "Residuos tóxicos";
+
+"type.recycling.clothes" = "Ropa vieja";
+
+"type.recycling.glass_bottles" = "Vidrio";
+
+"type.recycling.paper" = "Papel de desecho";
+
+"type.recycling.plastic" = "Residuos plásticos";
+
+"type.recycling.plastic_bottles" = "Botellas de plástico";
+
+"type.recycling.scrap_metal" = "Chatarra";
+
+"type.recycling.small_appliances" = "Chatarra electrónica";
 
 "type.amenity.restaurant" = "Restaurante";
 
