--- a/iphone/Maps/LocalizedStrings/fa.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fa.lproj/Localizable.strings
@@ -3304,6 +3304,16 @@
 
 "routes_card_plus_track" = "+ مسیر";
 
+"routes_card_city" = "City";
+
+"routes_card_outdoor" = "Outdoor";
+
+"routes_card_number_of_points" = "%s مکان ها";
+
+"routes_card_routes_tag" = "مسیر سفر";
+
+"routes_card_set_tag" = "مکان های ویژه";
+
 
 /**********  Partners  **********/
 
@@ -3507,6 +3517,24 @@
 "type.amenity.public_bookcase" = "Book Exchange";
 
 "type.amenity.recycling" = "مرکز بازیافت";
+
+"type.amenity.recycling_container" = "Recycling container";
+
+"type.recycling.toxic" = "Toxic waste";
+
+"type.recycling.clothes" = "Old clothes";
+
+"type.recycling.glass_bottles" = "Glass bottles";
+
+"type.recycling.paper" = "Paper waste";
+
+"type.recycling.plastic" = "Plastic waste";
+
+"type.recycling.plastic_bottles" = "Plastic bottles";
+
+"type.recycling.scrap_metal" = "Scrap metal";
+
+"type.recycling.small_appliances" = "Electronic waste";
 
 "type.amenity.restaurant" = "غذا";
 
