--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -3304,6 +3304,16 @@
 
 "routes_card_plus_track" = "+ трек";
 
+"routes_card_city" = "City";
+
+"routes_card_outdoor" = "Outdoor";
+
+"routes_card_number_of_points" = "%s мест";
+
+"routes_card_routes_tag" = "Маршрут";
+
+"routes_card_set_tag" = "Подборка мест";
+
 
 /**********  Partners  **********/
 
@@ -3507,6 +3517,24 @@
 "type.amenity.public_bookcase" = "Книжный шкаф";
 
 "type.amenity.recycling" = "Приём вторсырья";
+
+"type.amenity.recycling_container" = "Контейнер для вторсырья";
+
+"type.recycling.toxic" = "Ядовитые отходы";
+
+"type.recycling.clothes" = "Старая одежда";
+
+"type.recycling.glass_bottles" = "Стеклотара";
+
+"type.recycling.paper" = "Макулатура";
+
+"type.recycling.plastic" = "Пластиковый мусор";
+
+"type.recycling.plastic_bottles" = "Сбор пластиковых бутылок";
+
+"type.recycling.scrap_metal" = "Металлолом";
+
+"type.recycling.small_appliances" = "Электроотходы";
 
 "type.amenity.restaurant" = "Ресторан";
 
