--- a/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
@@ -3304,6 +3304,16 @@
 
 "routes_card_plus_track" = "+ трек";
 
+"routes_card_city" = "City";
+
+"routes_card_outdoor" = "Outdoor";
+
+"routes_card_number_of_points" = "%s місць";
+
+"routes_card_routes_tag" = "Маршрут";
+
+"routes_card_set_tag" = "Добірка місць";
+
 
 /**********  Partners  **********/
 
@@ -3507,6 +3517,24 @@
 "type.amenity.public_bookcase" = "Книги";
 
 "type.amenity.recycling" = "Прийом вторсировини";
+
+"type.amenity.recycling_container" = "Контейнер для вторсировини";
+
+"type.recycling.toxic" = "Отруйні відходи";
+
+"type.recycling.clothes" = "Старий одяг";
+
+"type.recycling.glass_bottles" = "Склотара";
+
+"type.recycling.paper" = "Макулатура";
+
+"type.recycling.plastic" = "Пластикове сміття";
+
+"type.recycling.plastic_bottles" = "Збір пластикових пляшок";
+
+"type.recycling.scrap_metal" = "Металолом";
+
+"type.recycling.small_appliances" = "Електровідходи";
 
 "type.amenity.restaurant" = "Ресторан";
 
